[package]
name = "SQLiteVFSTesting"
version = "0.1.0"
edition = "2021"

[lib]
name = "testvfs"
crate-type = ["cdylib"]

[dependencies]
libsqlite3-sys = "0.31.0"
# libsqlite3-sys = {version = "0.31.0", features = []}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
rusqlite = "0.33.0"
